<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.creativecommons.thelist.activities.MainActivity">
    <item android:id="@+id/about_theapp" android:title="@string/about_theapp_menu_label"
        android:orderInCategory="100" compat:showAsAction="never"/>
    <item android:id="@+id/switch_accounts" android:title="@string/switch_accounts_menu_label"
        android:orderInCategory="200" compat:showAsAction="never" />
    <item android:id="@+id/gallery" android:title="@string/gallery_menu_label"
        android:icon="@drawable/ic_photo_library_white_24dp"
        android:orderInCategory="300" compat:showAsAction="never"/>
    <item android:id="@+id/pick_categories" android:title="@string/pick_categories_menu_label"
        android:orderInCategory="400" compat:showAsAction="never"/>
    <item android:id="@+id/remove_accounts" android:title="Debug only: Remove Accounts"
        android:orderInCategory="500" compat:showAsAction="never"/>
</menu>