<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.creativecommons.thelist.TermsFragment"
    style="@style/fragment_layout_main">

    <TextView
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_label"
        style="@style/cancel_button" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/section_loading"
        android:layout_below="@id/cancelButton"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/terms_logo"
            android:id="@+id/confirm_icon"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section_terms"
        android:layout_below="@+id/section_loading"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/section_text"
            android:paddingTop="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true">
            <TextView
                style="@style/fragment_title"
                android:text="@string/terms_fragment_title"
                android:id="@+id/confirm_title"
                android:maxLines="1" />
            <TextView
                android:id="@+id/item_text"
                android:text="@string/terms_fragment_text"
                style="@style/fragment_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_learn_more_label"
                android:id="@+id/learnMoreButton"
                android:layout_below="@+id/item_text"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/text_medium_dark"
                android:layout_marginTop="10dp"
                android:gravity="center" />
        </RelativeLayout>


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_checkbox_label"
            android:id="@+id/checkBox"
            android:gravity="center"
            android:textColor="@color/primary_light"
            android:layout_below="@+id/section_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp" />

        <Button
            style="@style/standard_button"
            android:text="@string/terms_continue_button_label"
            android:id="@+id/nextButton"
            android:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
