<?xml version="1.0" encoding="utf-8"?>
<!--Convert to reusable butter-whatever-google-calls-it …butter bar? Sounds high calorie -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingBottom="8dp"
    android:minHeight="80dp"
    android:weightSum="6"
    android:orientation="vertical"
    android:background="@color/translucent_background"
    tools:showIn="@layout/fragment_category">

    <TextView
        android:id="@+id/category_helper_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/category_helper_title_label"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/app_white"/>

    <TextView
        android:id="@+id/category_helper_message"
        android:layout_below="@id/category_helper_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.1"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/app_white"
        android:text="@string/category_helper_message_label" />

    <Button
        android:id="@+id/helper_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_helper_message"
        android:layout_alignParentRight="true"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/app_white"
        android:text="@string/helper_message_confirm_button_label"
        android:capitalize="characters" />
</RelativeLayout>